--- a/MusicQuiz/MusicQuiz.csproj
+++ b/MusicQuiz/MusicQuiz.csproj
@@ -95,6 +95,78 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Themes\silence.mp3" />
+    <Resource Include="Images\moviescore.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\dancemusic.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\cartoon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\classicsongs.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Content Include="Themes\90sCartoons1\1.mp3" />
+    <Content Include="Themes\90sCartoons1\10.mp3" />
+    <Content Include="Themes\90sCartoons1\2.mp3" />
+    <Content Include="Themes\90sCartoons1\3.mp3" />
+    <Content Include="Themes\90sCartoons1\4.mp3" />
+    <Content Include="Themes\90sCartoons1\5.mp3" />
+    <Content Include="Themes\90sCartoons1\6.mp3" />
+    <Content Include="Themes\90sCartoons1\7.mp3" />
+    <Content Include="Themes\90sCartoons1\8.mp3" />
+    <Content Include="Themes\90sCartoons1\9.mp3" />
+    <Resource Include="Themes\90sCartoons1\Answers.txt" />
+    <Resource Include="Themes\90sCartoons2\Answers.txt" />
+    <Content Include="Themes\ClassicSongs1\1.mp3" />
+    <Content Include="Themes\ClassicSongs1\10.mp3" />
+    <Content Include="Themes\ClassicSongs1\2.mp3" />
+    <Content Include="Themes\ClassicSongs1\3.mp3" />
+    <Content Include="Themes\ClassicSongs1\4.mp3" />
+    <Content Include="Themes\ClassicSongs1\5.mp3" />
+    <Content Include="Themes\ClassicSongs1\6.mp3" />
+    <Content Include="Themes\ClassicSongs1\7.mp3" />
+    <Content Include="Themes\ClassicSongs1\8.mp3" />
+    <Content Include="Themes\ClassicSongs1\9.mp3" />
+    <Resource Include="Themes\ClassicSongs1\Answers.txt" />
+    <Content Include="Themes\DanceMusic1\1.mp3" />
+    <Content Include="Themes\DanceMusic1\10.mp3" />
+    <Content Include="Themes\DanceMusic1\2.mp3" />
+    <Content Include="Themes\DanceMusic1\3.mp3" />
+    <Content Include="Themes\DanceMusic1\4.mp3" />
+    <Content Include="Themes\DanceMusic1\5.mp3" />
+    <Content Include="Themes\DanceMusic1\6.mp3" />
+    <Content Include="Themes\DanceMusic1\7.mp3" />
+    <Content Include="Themes\DanceMusic1\8.mp3" />
+    <Content Include="Themes\DanceMusic1\9.mp3" />
+    <Resource Include="Themes\DanceMusic1\Answers.txt" />
+    <Content Include="Themes\MovieScores1\1.mp3" />
+    <Content Include="Themes\MovieScores1\10.mp3" />
+    <Content Include="Themes\MovieScores1\2.mp3" />
+    <Content Include="Themes\MovieScores1\3.mp3" />
+    <Content Include="Themes\MovieScores1\4.mp3" />
+    <Content Include="Themes\MovieScores1\5.mp3" />
+    <Content Include="Themes\MovieScores1\6.mp3" />
+    <Content Include="Themes\MovieScores1\7.mp3" />
+    <Content Include="Themes\MovieScores1\8.mp3" />
+    <Content Include="Themes\MovieScores1\9.mp3" />
+    <Resource Include="Themes\MovieScores1\Answers.txt" />
+    <Resource Include="Images\britpop.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Content Include="Themes\Britpop1\1.mp3" />
+    <Content Include="Themes\Britpop1\10.mp3" />
+    <Content Include="Themes\Britpop1\2.mp3" />
+    <Content Include="Themes\Britpop1\3.mp3" />
+    <Content Include="Themes\Britpop1\4.mp3" />
+    <Content Include="Themes\Britpop1\5.mp3" />
+    <Content Include="Themes\Britpop1\6.mp3" />
+    <Content Include="Themes\Britpop1\7.mp3" />
+    <Content Include="Themes\Britpop1\8.mp3" />
+    <Content Include="Themes\Britpop1\9.mp3" />
+    <Resource Include="Themes\Britpop1\Answers.txt" />
     <Content Include="Themes\MovieQuotes1\1.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -332,8 +404,9 @@
     <Resource Include="Themes\MovieQuotes2\Answers.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Images\filmreelRIGHT.png" />
-    <Resource Include="Images\Movie-Transparent-PNG.png" />
+    <Resource Include="Images\moviequote.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
